kubernetes/apps/dashboard/homarr/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  namespace: home-dashboard
spec:
  replicas: 1
  strategy: 
    type: Recreate
  selector:
    matchLabels:
      app: homarr
  template:
    metadata:
      labels:
        app: homarr
    spec:
      containers:
      - name: homarr
        image: ghcr.io/ajnart/homarr:0.15.6@sha256:889162656ea48d6ad151aa56328a81ac5320fd99f8923d065d915296384c346e
        imagePullPolicy: Always
        resources: {}
        ports:
        - containerPort: 7575
        volumeMounts:
        - mountPath: /app/data/configs
          name: homarr-storage
        - mountPath: /app/public/icons
          name: homarr-storage
        - mountPath: /data
          name: homarr-storage
      volumes:
      - name: homarr-storage
        persistentVolumeClaim:
          claimName: homarr-pvc
