kubernetes/apps/dashboard/homarr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr-service
  namespace: home-dashboard
spec:
  selector:
    app: homarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7575
