kubernetes/apps/dashboard/homarr/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr
spec:
  ingressClassName: internal
  rules:
    - host: &host homarr.local.solonsstuff.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homarr-service
                port:
                  number: 80
  tls:
    - hosts:
        - *host
